
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXEC_SIZE ;
 int exec ;
 int printf (char*,...) ;
 size_t strlen (char*) ;
 int xcode (int ,int ,char*,size_t) ;

int main(int argc, char *argv[])
{
    size_t len;
    char *cmd;

    if (argc != 2) {
      printf ("\n  usage: xcmd <command>\n");
      return 0;
    }

    cmd=argv[1];
    len=strlen(cmd);

    if (len==0 || len>255) {
      printf ("\n  invalid command length: %i (must be between 1 and 255)", len);
      return 0;
    }

    xcode(exec, EXEC_SIZE, cmd, len);

    return 0;
}
