; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/multiple/extr_39885.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/multiple/extr_39885.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"\0A  usage: xcmd <command>\0A\00", align 1
@.str.1 = private unnamed_addr constant [58 x i8] c"\0A  invalid command length: %i (must be between 1 and 255)\00", align 1
@exec = common dso_local global i32 0, align 4
@EXEC_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 2
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %32

12:                                               ; preds = %2
  %13 = load i8**, i8*** %5, align 8
  %14 = getelementptr inbounds i8*, i8** %13, i64 1
  %15 = load i8*, i8** %14, align 8
  store i8* %15, i8** %7, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = call i64 @strlen(i8* %16)
  store i64 %17, i64* %6, align 8
  %18 = load i64, i64* %6, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %12
  %21 = load i64, i64* %6, align 8
  %22 = icmp ugt i64 %21, 255
  br i1 %22, label %23, label %26

23:                                               ; preds = %20, %12
  %24 = load i64, i64* %6, align 8
  %25 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.1, i64 0, i64 0), i64 %24)
  store i32 0, i32* %3, align 4
  br label %32

26:                                               ; preds = %20
  %27 = load i32, i32* @exec, align 4
  %28 = load i32, i32* @EXEC_SIZE, align 4
  %29 = load i8*, i8** %7, align 8
  %30 = load i64, i64* %6, align 8
  %31 = call i32 @xcode(i32 %27, i32 %28, i8* %29, i64 %30)
  store i32 0, i32* %3, align 4
  br label %32

32:                                               ; preds = %26, %23, %10
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @xcode(i32, i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
